<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DUT_ALM" Id="{5d8818e7-c143-44b5-a75f-8d988f63bb22}">
    <Declaration><![CDATA[TYPE DUT_ALM :
STRUCT
	GeneralFailure: BOOL;
	TimeFailure: BOOL;
	InAlarm: BOOL := TimeFailure OR GeneralFailure;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>