<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DUT_Control_Base" Id="{b6e1d523-0f0a-41db-aa44-7681e860b370}">
    <Declaration><![CDATA[TYPE DUT_Control_Base :
STRUCT
	Open :BOOL;
	Close :BOOL;
	Reset :BOOL;
	Simulation :BOOL;
	AutoOn :BOOL;
	AutoOff :BOOL;
	ManualOn :BOOL;
	ManualOff :BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>