<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DUT_STS" Id="{5dea48e3-53b5-4e73-9a33-750a11544aa9}">
    <Declaration><![CDATA[TYPE DUT_STS :
STRUCT
	State : INT;
	ManualMode: BOOL;
	AutoMode: BOOL := TRUE;
	InSimulation: BOOL;
	Closed: BOOL := TRUE;
	Opening: BOOL;
	Open: BOOL:= TRUE;
	Closing: BOOL;
	Interlock: BOOL;
	Alarm: BOOL;
END_STRUCT	
	
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>