<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DUT_VALVE" Id="{e6b7e6f6-2682-4383-a671-71fb6f42c58c}">
    <Declaration><![CDATA[TYPE DUT_VALVE :
STRUCT
	Cs: DUT_CS;
	Hmi: DUT_HMI;
	Sts: DUT_STS;
	Alm: DUT_ALM;
	TagName: STRING := '###';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>